# myunits

./: .gitignore  .prettierrc.json  .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml
doc/: genreadme.py
doc/notebooks/: userguide.ipynb  userguide.md
src/myunits/: __init__.py
