[project]
name = "myunits"
version = "0.1.0"
description = "A simple module with a selection of units to simple conversions, using library Pint."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Diogo Rossi", email = "rossi.diogo@gmail.com" },
]
requires-python = ">=3.12"
dependencies = ["pint==0.25.3"]
classifiers = [
    "Programming Language :: Python :: 3.12",
]

[build-system]
requires = ["uv_build==0.9.24,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black==26.3.1",
    "taskipy==1.14.1",
]
docs = [
    "furo==2025.12.19",
    "jupyter==1.1.1",
    "myst-parser==5.0.0",
    "pyprj==0.12.1",
    "sphinx==9.1.0",
    "sphinx-copybutton==0.5.2",
    "sphinx-mathjax-offline==0.0.2",
    "sphinxnotes-comboroles==1.0",
]
test = ["pytest==9.0.2"]

[project.urls]
Documentation = "https://github.com/diogo-rossi/myunits/blob/main/README.md"
Issues = "https://github.com/diogo-rossi/myunits/issues"
Source = "https://github.com/diogo-rossi/myunits"

[tool.pytest]
addopts = [
    "-rx",        # Show extra test summary (r): (x)failed
    "-vv",        # Increase verbosity
    "-s",         # Shortcut for --capture=no (Per-test capturing method)
    "--tb=short", # Traceback print mode = short
]

[tool.black]
line-length = 128

[tool.taskipy.tasks]
docs = { cmd = "make html", cwd = "./doc/sphinx", help = "Make docs with sphinx in folder './doc/sphinx'" }
open = { cmd = "index.html", cwd = "./doc/sphinx/build/html", help = "Open sphinx docs in folder './doc/sphinx/build/html'" }
test = { cmd = "pytest", cwd = "./tests", help = "Test with pytest in folder './tests'" }
build = { cmd = "uv build", cwd = ".", help = "Build package" }
publish = { cmd = "pyprj publish", cwd = ".", help = "Publish package to PyPI" }
